// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeDataSource should be fetched children nodes 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "collection": undefined,
    "fields": Object {
      "children": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "parent": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "parentId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "9e900ddcab7f",
    "type": "organization.Department",
  },
  "children": Array [],
  "code": 62427,
  "id": "9e900ddcab7f",
  "name": "Table",
  "parent": Object {
    "id": "005ddc160e41",
    "type": "organization.Department",
  },
  "parentId": "005ddc160e41",
}
`;

exports[`TreeDataSource should be fetched parent nodes on chain 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "collection": undefined,
    "fields": Object {
      "children": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "parent": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "parentId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "747a3ade7dfa",
    "type": "organization.Department",
  },
  "children": Array [
    Object {
      "id": "c0d51d4b59d6",
      "type": "organization.Department",
    },
  ],
  "code": 54800,
  "id": "747a3ade7dfa",
  "name": "Ergonomic",
  "parent": Object {
    "id": "4a24ac804f52",
    "type": "organization.Department",
  },
  "parentId": "4a24ac804f52",
}
`;
